--- a/Documents/Interstitial/Guide.asciidoc
+++ b/Documents/Interstitial/Guide.asciidoc
@@ -28,7 +28,8 @@ image:Images/Interstitial_00.jpg[
 閉じるボタン::
 広告のランディングページへ遷移せず、全画面モードを解除します。
 
-NOTE: デベロッパは広告がクリックされたか、閉じるボタンを押されたかをコールバックにより知ることができます（Unityプラグイン、Cocos2d-xモジュールはコールバックに対応していません）。
+NOTE: デベロッパは広告がクリックされたか、閉じるボタンを押されたかをコールバックにより
+知ることができます（Unityプラグイン、Cocos2d-xモジュールはコールバックに対応していません）。
 
 NOTE: 広告取得エラーの場合、インタースティシャル（全画面）広告は表示されません。
 
