--- a/Documents/Interstitial/Guide.asciidoc
+++ b/Documents/Interstitial/Guide.asciidoc
@@ -54,4 +54,7 @@ image:Images/Interstitial_00.png[
 "インタースティシャル（全画面）広告 実装例1", width=540px
 ]
 
-NOTE: サイズは画面横幅を320pxとしたときの数値です。インタースティシャル（全画面）広告は端末の画面サイズにより拡大されます。
+NOTE: サイズは画面横幅を320pxとしたときの数値です。レスポンシブオプションを指定した場合、
+インタースティシャル（全画面）広告は端末の画面サイズにより拡大されます。
+
+NOTE: 横画面には未対応です。
