--- a/README.asciidoc
+++ b/README.asciidoc
@@ -7,67 +7,93 @@
 
 link:https://github.com/amoad/amoad-ios-sdk/archive/master.zip[ZIPをダウンロード]
 
-== 概要
+== 更新情報
 
-* link:https://github.com/amoad/amoad-ios-sdk/releases[更新履歴]
+* link:https://github.com/amoad/amoad-ios-sdk/releases[リリース履歴]
 ** AMoAd.hのimportが必須になっています。
 ** スタイルを管理画面よりHTML+CSSでデザインできる「ネイティブHTML広告」機能を追加しました。
 ** **[NEW] アプリのコンテンツに広告画像とテキストを表示することができる「インフィード広告」機能を追加しました。**
 ** **[NEW] インタースティシャル（全画面）広告が横画面に対応しました（Unityプラグイン、Cocos2d-xモジュールは近日公開予定）。**
 
+* **link:Documents/Install/Install.asciidoc#34-ats-app-transport-security-を抑制する[
+iOS 9のATS (App Transport Security) を抑制する方法について追記しました。
+必ずご確認ください！]**
+
 NOTE: AMoAd SDKに関する技術的なお問い合わせ・ご要望は link:https://github.com/amoad/amoad-ios-sdk/issues[こちら] 。
 
 
-== SDKのインストール
-
-**iOS 9のATS (App Transport Security) を抑制する方法について追記しました。必ずご確認ください！（link:Documents/Install/Install.asciidoc[SDKインストールガイド]）**
-
-link:Documents/Install/Install.asciidoc[SDKインストールガイド]::
-SDK共通のインストール方法
-
-
-== ネイティブHTML広告
+== ネイティブ広告
+=== ネイティブHTML広告
 
 スタイルを管理画面よりHTML+CSSでデザインできるネイティブ広告です。
 
 .デモアプリ
-. link:https://github.com/amoad/amoad-native-ios-sdk[iOSで開発される方]
+- link:https://github.com/amoad/amoad-native-ios-sdk[iOSで開発される方]
 
-. link:https://github.com/amoad/amoad-native-unity-sdk[Unityで開発される方]
+- link:https://github.com/amoad/amoad-native-unity-sdk[Unityで開発される方]
 
-. link:https://github.com/amoad/amoad-native-cocos2dx-sdk[Cocos2d-xで開発される方]
+- link:https://github.com/amoad/amoad-native-cocos2dx-sdk[Cocos2d-xで開発される方]
 
 ※ 各デモアプリをダウンロードして、アプリに組み込んでください。
 
 
-== インフィード広告
+=== インフィード広告
 
 アプリのコンテンツに広告画像とテキストを表示することができるネイティブ広告です。
 
-link:https://github.com/amoad/amoad-nativelist-ios-sdk[デモアプリ]
+.デモアプリ
+- link:https://github.com/amoad/amoad-nativelist-ios-sdk[iOSで開発される方]
 
 ※ デモアプリをダウンロードして、アプリに組み込んでください。
+
+
+=== プリロール
+- link:Documents/Native/Overview_preroll.asciidoc[概要] +
+マンガアプリなどで、コンテンツの前後に入れる広告です。
+
+- link:Documents/Native/Guide_preroll.asciidoc[実装ガイド] +
+AMoAd SDKでは、プリロール広告を簡単に表示するAPIを提供しています
+
+- link:Samples/NativePreRoll/AMoAdNativePreRoll[サンプルコード] +
+管理画面から取得したsidを入力して動かしてください
 
 
 == ディスプレイ広告
 
 === インライン広告
 
-link:Documents/Display/Guide.asciidoc[実装ガイド]::
-実装方法
+.iOSで開発される方
+- link:Documents/Install/Install.asciidoc[SDK導入ガイド]
+- link:Documents/Display/Guide.asciidoc[SDK実装ガイド]
 
-link:https://github.com/amoad/amoad-ios-sdk/tree/master/Samples/Display[サンプルコード]::
-管理画面から取得したsidを入力して動かしてください
+.Unityで開発される方
+- link:Documents/UnityPlugin/Guide.asciidoc[Unityプラグイン導入ガイド]
+- link:Documents/UnityPlugin/Display.asciidoc[Unityプラグイン実装ガイド]
+
+.Cocos2d-xで開発される方
+- link:Documents/Cocos2dxModule/Guide.asciidoc[Cocos2d-xモジュール導入ガイド]
+- link:Documents/Cocos2dxModule/Display.asciidoc[Cocos2d-xモジュール実装ガイド]
+
 
 === インタースティシャル（全画面）広告
 
-link:Documents/Display/Interstitial.asciidoc[実装ガイド]::
-実装方法
+- link:Documents/Interstitial/Guide.asciidoc[概要] +
+レクタングル広告（300x250）をカスタマイズ可能なパネルに乗せて全画面表示させる機能です
 
-link:../Samples/DisplayInterstitial[サンプルコード]::
-管理画面から取得したsidを入力して動かしてください
+.iOSで開発される方
+- link:Documents/Install/Install.asciidoc[SDK導入ガイド]
+- link:Documents/Display/Interstitial.asciidoc[SDKインタースティシャル実装ガイド]
 
-== ネイティブ広告
+.Unityで開発される方
+- link:Documents/UnityPlugin/Guide.asciidoc[Unityプラグイン インタースティシャル導入ガイド]
+- link:Documents/UnityPlugin/Interstitial.asciidoc[Unityプラグイン インタースティシャル実装ガイド]
+
+.Cocos2d-xで開発される方
+- link:Documents/Cocos2dxModule/Guide.asciidoc[Cocos2d-xモジュール インタースティシャル導入ガイド]
+- link:Documents/Cocos2dxModule/Interstitial.asciidoc[Cocos2d-xモジュール インタースティシャル実装ガイド]
+
+== 旧ネイティブ広告
+ネイティブHTML広告、インフィード広告の利用をご検討ください。
 
 === ネイティブApp
 
@@ -85,62 +111,19 @@ link:Documents/Native/Overview_listView.asciidoc[概要]::
 link:Documents/Native/Guide_listView.asciidoc[実装ガイド]::
 AMoAd SDKでは、リストビュー広告を簡単に表示するAPIを提供しています
 
-=== プリロール
-link:Documents/Native/Overview_preroll.asciidoc[概要]::
-マンガアプリなどで、コンテンツの前後に入れる広告です。
-
-link:Documents/Native/Guide_preroll.asciidoc[実装ガイド]::
-AMoAd SDKでは、プリロール広告を簡単に表示するAPIを提供しています
-
-link:Samples/NativePreRoll/AMoAdNativePreRoll[サンプルコード]::
-管理画面から取得したsidを入力して動かしてください
-
-=== ネイティブ広告（共通）
-
-link:https://rawgit.com/amoad/amoad-ios-sdk/master/Documents/Native/appledoc/index.html[APIリファレンス]::
-AppleDocドキュメント
-
-link:https://github.com/amoad/amoad-ios-sdk/tree/master/Samples/Native[サンプルコード]:: ネイティブ広告の種類に応じたサンプルコードに、管理画面から取得したsidを入力して動かしてください
-
-== インタースティシャル（全画面）広告
-link:Documents/Interstitial/Guide.asciidoc[概要]::
-インタースティシャル（全画面）広告とは、AMoAdネットワークのレクタングル広告（300x250）をカスタマイズ可能なパネルに乗せて全画面表示させる機能です
-
-NOTE: Unityプラグイン、Cocos2d-xモジュールに対応しています
-
-== プラグインなど
-=== Unityプラグイン
-
-link:Documents/UnityPlugin/Guide.asciidoc[導入ガイド]::
-プラグインの適用手順とビルド方法について説明します
-
-link:Documents/UnityPlugin/Display.asciidoc[インライン広告 実装ガイド]::
-インライン広告の実装方法とサンプルコードの使い方について説明します
-
-link:Documents/UnityPlugin/Interstitial.asciidoc[インタースティシャル（全画面）広告 実装ガイド]::
-インタースティシャル（全画面）広告の実装方法とサンプルコードの使い方について説明します
-
-=== Cocos2d-xモジュール
-link:Documents/Cocos2dxModule/Guide.asciidoc[導入ガイド]::
-モジュールの適用手順とビルド方法について説明します
-
-link:Documents/Cocos2dxModule/Display.asciidoc[インライン広告 実装ガイド]::
-インライン広告の実装方法について説明します
-
-link:Documents/Cocos2dxModule/Interstitial.asciidoc[インタースティシャル（全画面）広告 実装ガイド]::
-インタースティシャル（全画面）広告の実装方法について説明します
+== その他
 
 === AdMobメディエーション アダプタ
 
-link:Documents/AdMobMediation/AdMobSetup.asciidoc[導入ガイド]::
+link:Documents/AdMobMediation/AdMobSetup.asciidoc[AdMobメディエーションアダプタ導入ガイド]::
 アダプタの導入方法とAdMobメディエーションの設定についてのガイドです
 
 https://github.com/amoad/amoad-ios-sdk/raw/master/AdMobMediation/libAMoAdGmAdapter.a[アダプタのダウンロード]::
 最新版のアダプタはこちらからダウンロードできます
 
 
-== WebViewサポート機能
+=== WebViewサポート機能
 UIWebViewへアドタグを貼る。
 
-link:Documents/WebView/guide.md[実装ガイド]::
+link:Documents/WebView/guide.md[WebViewサポート機能 実装ガイド]::
 実装方法
