--- a/README.asciidoc
+++ b/README.asciidoc
@@ -3,6 +3,7 @@
 :numbered:
 :sectnums:
 
+- link:https://github.com/amoad/amoad-ios-sdk/releases[最新版をダウンロード]
 - link:https://github.com/amoad/amoad-ios-sdk/releases/latest[安定版をダウンロード]
 - link:https://github.com/amoad/amoad-ios-sdk/wiki[ドキュメント]
 
