--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,4 @@
-= AMoAd SDK for iOS ver 5.2.10
+= AMoAd SDK for iOS ver 5.2.11
 
 :numbered:
 :sectnums:
@@ -9,7 +9,8 @@
 == 更新情報
 
 * link:https://github.com/amoad/amoad-ios-sdk/releases[リリース履歴]
-** プロジェクト構成の見直しと不要ファイルを削除しました。
+** 内部APIの一部をSwiftに移行しました
+** 対応SDKバージョンがiOS 9以上に変更になりました
 
 
 == その他
