--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,4 @@
-= AMoAd SDK for iOS ver 5.2.11
+= AMoAd SDK for iOS ver 5.2.12
 
 :numbered:
 :sectnums:
@@ -9,8 +9,7 @@
 == 更新情報
 
 * link:https://github.com/amoad/amoad-ios-sdk/releases[リリース履歴]
-** 内部APIの一部をSwiftに移行しました
-** 対応SDKバージョンがiOS 9以上に変更になりました
+** arm64eに対応しました
 
 
 == その他
