--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,4 @@
-= AMoAd SDK for iOS ver 5.2.12
+= AMoAd SDK for iOS ver 5.2.13
 
 :numbered:
 :sectnums:
@@ -9,7 +9,8 @@
 == 更新情報
 
 * link:https://github.com/amoad/amoad-ios-sdk/releases[リリース履歴]
-** arm64eに対応しました
+** 内部APIの一部をSwiftに移行しました
+** 軽微な不具合を修正しました
 
 
 == その他
