--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,4 @@
-= AMoAd SDK for iOS ver 5.2.13
+= AMoAd SDK for iOS ver 5.2.15
 
 :numbered:
 :sectnums:
@@ -9,8 +9,8 @@
 == 更新情報
 
 * link:https://github.com/amoad/amoad-ios-sdk/releases[リリース履歴]
-** 内部APIの一部をSwiftに移行しました
-** 軽微な不具合を修正しました
+** プリロール広告で全画面クリックができるようになりました
+** 一部広告情報のパースに失敗する問題に対応しました
 
 
 == その他
