--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,4 @@
-= AMoAd SDK for iOS ver 6.0.0
+= AMoAd SDK for iOS ver 6.0.1
 
 :numbered:
 :sectnums:
@@ -9,7 +9,7 @@
 == 更新情報
 
 * link:https://github.com/amoad/amoad-ios-sdk/releases[リリース履歴]
-** SDKで使用する言語をSwiftに移行
+** WKWebViewへの移行
 
 
 == その他
