--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,4 @@
-= AMoAd SDK for iOS ver 6.0.2
+= AMoAd SDK for iOS ver 6.0.3
 
 :numbered:
 :sectnums:
@@ -9,7 +9,7 @@
 == 更新情報
 
 * link:https://github.com/amoad/amoad-ios-sdk/releases[リリース履歴]
-** iOS13でのインタースティシャル表示の修正
+** コピーライトの修正とリファクタリング
 
 
 == その他
