--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,4 @@
-= AMoAd SDK for iOS ver 6.1.9
+= AMoAd SDK for iOS ver 6.1.11
 
 :numbered:
 :sectnums:
@@ -9,9 +9,7 @@
 == 更新情報
 
 * link:https://github.com/amoad/amoad-ios-sdk/releases[リリース履歴]
-** InfeedAfio広告の改修
-*** ViewThrough計測の不具合を修正
-*** InfeedAfio広告で一度可視領域から外れて再度広告を描画した際途中から動画を再生するように修正
+** Xcode v14.2に対応
 
 == その他
 AMoAd SDKに関する技術的なお問い合わせ・ご要望は link:https://github.com/amoad/amoad-ios-sdk/issues[こちら] まで 。
