--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,4 @@
-= AMoAd SDK for iOS ver 6.1.16
+= AMoAd SDK for iOS ver 6.1.17
 
 :numbered:
 :sectnums:
@@ -9,7 +9,9 @@
 == 更新情報
 
 * link:https://github.com/amoad/amoad-ios-sdk/releases[リリース履歴]
-** 外部ライブラリへの依存を削除
+** フルスクリーン動画広告を実装
+** SKAdNetwork4.0に対応
+** SKOverlayに対応
 
 == その他
 AMoAd SDKに関する技術的なお問い合わせ・ご要望は link:https://github.com/amoad/amoad-ios-sdk/issues[こちら] まで 。
